# ton-connect-cli

./: .gitignore  LICENSE  README.md  pyproject.toml  test.py
TonConnect/: __init__.py  app.py  bridge_client.py  proof_generator.py  ton_wallet.py  types.py  url_parser.py
